# pseudo-inverse-category

./: CHANGELOG.md  LICENSE  README.md  figlet  pseudo-inverse-category.cabal  stack.yaml
nix/: base.nix
src/Control/: PseudoInverseCategory.hs
