cabal-version:       2.4
name:                pseudo-inverse-category
version:             0.1.0.0

library
  exposed-modules:
    Control.PseudoInverseCategory

  ghc-options:
    -Wall
    -Wcompat
    -fwarn-redundant-constraints
    -fwarn-incomplete-uni-patterns
    -fwarn-tabs
    -fwarn-incomplete-record-updates
    -fwarn-identities

  build-depends:       base ^>=4.12.0.0
   , category >=0.2 && <0.3
   , Shpadoinkle
  hs-source-dirs:      src
  default-language:    Haskell2010
